--- a/Zadanie1.ipynb
+++ b/Zadanie1.ipynb
@@ -12,6 +12,19 @@
      "metadata": {},
      "source": [
       "## Zadanie 1: Analiza dzialania programu.\n",
+      "\n",
+      "> UWAGA! Niestety ch\u0105c korzysta\u0107 z dobrodziejstw tego co opisa\u0142em poni\u017cej\n",
+      "> [www.codeskulptor.org](codeskulptor.org) ju\u017c nam nie b\u0119dzie wystarcza\u0142.\n",
+      "\n",
+      "> Przerzucamy si\u0119\u00a0na:\n",
+      "    \n",
+      "> [http://www.compileonline.com/execute_python_online.php](http://www.compileonline.com/execute_python_online.php)\n",
+      "\n",
+      "> wydaje si\u0119\u00a0dzia\u0142a\u0107\u00a0r\u00f3wnie dobrze jak codeskulptor - a na pewno lepiej ni\u017c\u00a0c9.io ;)\n",
+      "\n",
+      "> tyle uwaga, wracajac do zadania...\n",
+      "\n",
+      "\n",
       "Pisz\u0105c programy pope\u0142niamy b\u0142\u0119dy :)\n",
       "\n",
       "Na pocz\u0105tku sa to poste do wykrycia b\u0142\u0119dy w sk\u0142\u0105dni. Wtedy m\u0105dry Python rzuci w nas b\u0142\u0119dem, powie o kt\u00f3ra linijk\u0119\u00a0chodzi i dzi\u0119ki temu mamy jaka\u015b wskaz\u00f3wk\u0119 co porapwi\u0107.\n",
