--- a/Zadanie1.ipynb
+++ b/Zadanie1.ipynb
@@ -324,8 +324,23 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 63
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Inicjalizacja zmiennej silnia na wartoosc 1\n",
+        "Wchodze do petli\n",
+        "wykonuje petle dla wartosci x=1 wartosc zmiennej wynosi silnia=1\n",
+        "wykonuje petle dla wartosci x=2 wartosc zmiennej wynosi silnia=1\n",
+        "wykonuje petle dla wartosci x=3 wartosc zmiennej wynosi silnia=2\n",
+        "wykonuje petle dla wartosci x=4 wartosc zmiennej wynosi silnia=6\n",
+        "Opuscilem petle\n",
+        "24\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -392,15 +407,63 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-64-d89ef94d9523>, line 1)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-64-d89ef94d9523>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    [$Number]\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: Inicjalizacja zmiennej silnia na wartoosc 1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: Wchodze do petli\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: wykonuje petle dla wartosci x=1 wartosc zmiennej wynosi silnia=1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: wykonuje petle dla wartosci x=2 wartosc zmiennej wynosi silnia=1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: wykonuje petle dla wartosci x=3 wartosc zmiennej wynosi silnia=2\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: wykonuje petle dla wartosci x=4 wartosc zmiennej wynosi silnia=6\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[INFO]: Opuscilem petle\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "24\n"
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
